bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:8: error: ';' expected but 'return' found.
    } return false
      ^PosNeg:9: error: ';' expected but 'return' found.
  } return false
    ^