bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  
  if (a*b <= 0) {
    return true
  } else {
    if (negative && (a <=0 && b <=0)) {
      return true
    } return false
  } return false
  
}